# boleto_cnab_api

./: .dockerignore  .gitignore  ANALISE_BRCOBRANCA.md  CAMPOS_BOLETOS_POR_BANCO.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.prawn  Dockerfile.rghost  EXEMPLOS_MAXIMO_CAMPOS.md  Gemfile  LICENSE  README.md  SECURITY.md  TABELA_COMPLETA_CAMPOS_POR_BANCO.md  TROUBLESHOOTING_API.md  VALIDACAO_CAMPOS_COMPLETA.md  config.ru  docker-compose.yml  render.yaml  start.sh
.github/: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  keepalive.yml
boleto-api-python/: .gitignore  README.md  openapi.json  requirements.txt
boleto-api-python/app/: main.py  registry.py  schemas.py
boleto-api-python/app/clients/: engine.py  oauth_mtls.py
boleto-api-python/app/core/: forwarder.py  subscriptions.py  vault.py
boleto-api-python/app/providers/: base.py  brcobranca_proxy.py  c6.py  sicoob.py
boleto-api-python/app/routers/: carne.py  cobranca.py  webhooks.py
boleto-api-python/tests/: conftest.py  test_carne.py  test_cobranca_brcobranca.py  test_cobranca_c6.py  test_cobranca_sicoob.py  test_errors.py  test_fallback.py  test_forwarder.py  test_health.py  test_oauth_mtls.py  test_subscriptions.py  test_vault.py  test_webhooks.py
config/: puma.rb
docs/: ARCHITECTURE.md  DEPLOY.md  README.md  ROADMAP.md  TODO_INTEGRACAO.md  openapi.yaml  swagger.html
docs/api/: ofx-parsing.md  pix.md  troubleshooting.md
docs/development/: brcobranca-fork.md  comparativo-psp-imobiliaria.md  gateway-bancario-spike.md  handoff-gestao-contrato.md  remodelagem-gateway-servicos.md  separacao-3-produtos.md
docs/fields/: README.md  all-banks.md  examples.md  nosso-numero.md
examples/python/: README.md  exemplo_basico.py  exemplo_multiplos_bancos.py  exemplo_sicoob.py  exemplo_tratamento_erros.py  generate_boleto.py  generate_remessa.py  generate_test_boletos.py
lib/: boleto_api.rb
lib/boleto_api/: version.rb
lib/boleto_api/config/: constants.rb
lib/boleto_api/endpoints/: boleto_endpoint.rb  cobranca_endpoint.rb  docs_endpoint.rb  health_endpoint.rb  ofx_endpoint.rb  remessa_endpoint.rb  render_endpoint.rb  retorno_endpoint.rb  webhooks_endpoint.rb
lib/boleto_api/middleware/: error_handler.rb  request_logger.rb
lib/boleto_api/providers/: base_provider.rb  brcobranca_provider.rb  c6_client.rb  c6_provider.rb  registry.rb
lib/boleto_api/services/: bank_info_service.rb  boleto_service.rb  field_mapper.rb  nosso_numero_extractor.rb  ofx_parser_service.rb  (+2 more)
python-client/: README.md  pyproject.toml  requirements.txt  setup.py
python-client/boleto_cnab_client/: __init__.py  client.py  exceptions.py  models.py  types.py
python-client/tests/: conftest.py  test_client.py  test_exceptions.py  test_models.py  test_types.py
scripts/: README.md  bump-version.sh
spec/: all_banks_spec.rb  boleto_spec.rb  spec_helper.rb
spec/fixtures/: extrato_itau.ofx  extrato_sicoob.ofx  sample_data.json
spec/integration/: banco_c6_spec.rb  boleto_include_data_spec.rb  carne_boleto_spec.rb  cnab_completo_spec.rb  docs_endpoint_spec.rb  multi_boleto_spec.rb  ofx_endpoint_spec.rb  pix_boleto_spec.rb  remessa_pix_spec.rb  remessa_spec.rb  render_spec.rb  retorno_spec.rb
(+8 files in other folders)
