[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "boleto-cnab-client"
dynamic = ["version"]
description = "Cliente Python oficial para a API de geração de Boletos Bancários Brasileiros"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Maxwell da Silva Oliveira", email = "maxwbh@gmail.com"}
]
maintainers = [
    {name = "Maxwell da Silva Oliveira", email = "maxwbh@gmail.com"}
]
keywords = [
    "boleto",
    "cnab",
    "brazil",
    "banking",
    "api",
    "client",
    "payment",
    "cobranca"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Typing :: Typed"
]
dependencies = [
    "requests>=2.25.0",
    "typing-extensions>=4.0.0;python_version<'3.10'"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0"
]

[project.urls]
Homepage = "https://github.com/Maxwbh/boleto_cnab_api"
Documentation = "https://github.com/Maxwbh/boleto_cnab_api/tree/main/python-client"
Repository = "https://github.com/Maxwbh/boleto_cnab_api"
Issues = "https://github.com/Maxwbh/boleto_cnab_api/issues"
Changelog = "https://github.com/Maxwbh/boleto_cnab_api/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "boleto_cnab_client.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["boleto_cnab_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source = ["boleto_cnab_client"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
